syntax = "proto3";

option java_package = "io.grpc.todo";
option java_multiple_files = true;
option java_outer_classname = "JavaTodoService";

//Important to be always same in every environment
package todo;

import "google/protobuf/empty.proto";

message Empty {}

message TodoRequest {
  string id = 1;
}

message Todo {
  string id = 1;
  string name = 2;
  string description = 3;
  bool done = 4;
  repeated string tags = 5;
}

message TodoList {
  repeated Todo todos = 1;
}

service TodoService {
  rpc CreateTodo(Todo) returns(TodoRequest) {}
  rpc UpdateTodo(Todo) returns(google.protobuf.Empty) {}
  rpc GetTodo(TodoRequest) returns(Todo) {}
  rpc GetTodos(google.protobuf.Empty) returns(TodoList) {}
}